plugins {
    id 'java'
    id 'pmd'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.spotbugs' version '6.5.10'
}

group = 'watson'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform('software.amazon.awssdk:bom:2.54.4')
    implementation 'software.amazon.awssdk:s3'
    implementation 'com.posthog:posthog-server:2.16.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    // 관리자 페이지 (2026-08-06 M7 결정: Thymeleaf 서버 렌더링)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation platform('org.testcontainers:testcontainers-bom:1.21.3')
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform()
}

pmd {
    toolVersion = '7.26.0'
    ruleSets = []
    ruleSetFiles = files('config/pmd/ruleset.xml')
    consoleOutput = true
}

tasks.named('pmdTest') {
    ruleSetFiles = files('config/pmd/ruleset-test.xml')
}

spotbugs {
    excludeFilter = file('config/spotbugs/exclude.xml')
}
